# reservation

./: .env  .pre-commit-config.yaml  Cargo.toml  deny.toml
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: lib.rs
abi/src/error/: conflict.rs
abi/src/pb/: mod.rs  reservation.rs
migrations/: 20250111071113_init.down.sql  20250111071113_init.up.sql  20250111074724_reservation.down.sql  20250111074724_reservation.up.sql  20250111075123_reservation_trigger.down.sql  20250111075123_reservation_trigger.up.sql  20250111075327_reservation_func.down.sql  20250111075327_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: 0001-core-reservation.md
service/: Cargo.toml
service/src/: service.rs
service/tests/: service.rs
